#
# Copyright IBM Corp. 2020-
# SPDX-License-Identifier: Apache2.0
#

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project]
name = "conformal_beams"
description = "Beam search with theoretical guarantees"
authors = [
    { name = "Nicolas Deutschmann", email = "deu@zurich.ibm.com" },
    { name = "Marvin Alberts", email = "marvin.alberts@ibm.com" },
]
readme = "README.md"
# due to how PEP 440 defines version matching, prefer [incl, excl) definitions like below:
requires-python = ">=3.10, <3.11"
dependencies = [
    "click",
    "datasets",
    "matplotlib",
    "numpy",
    "omegaconf",
    "pandas",
    "pytorch-lightning",
    "scikit-learn",
    "scipy",
    "seaborn",
    "torch",
    "tqdm",
    "transformers",
    "typing_extensions"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/IBM/conformal_beam_search"
